# golddigger_client

./: CMakeLists.txt  README.md  init_network.sh  package.xml
launch/: start_golddigger_client.launch
light_node/: CMakeLists.txt  package.xml
light_node/launch/: koalaunch.launch
light_node/src/: light.cpp
src/: light.cpp
